--- a/lib/plugins/clienttype/package.json
+++ b/lib/plugins/clienttype/package.json
@@ -4,7 +4,7 @@
     "main": "clienttype.js",
     "private": true,
     "dependencies": {
-      "watson-developer-cloud": "^2.39.2"
+      "debug": "^3.1.0"
     },
     "plugin": {
         "consumes": [],
