--- a/lib/plugins/geolocation/package.json
+++ b/lib/plugins/geolocation/package.json
@@ -4,10 +4,11 @@
     "main": "geolocation.js",
     "private": true,
     "dependencies": {
+      "debug": "^3.1.0",
       "@google/maps": "^0.4.3"
     },
     "plugin": {
         "consumes": [],
-        "provides": ["geolocation"]
+        "provides": ["geolocation", "geolocationMiddleware"]
     }
 }
