--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/maps": "^0.4.3",
     "architect": "^0.1.13",
     "debug": "^3.1.0",
+    "sample-wch-node-connector": "^0.7.2",
     "watson-developer-cloud": "^2.39.2"
   },
   "devDependencies": {
