--- a/lib/plugins/toneanalyzer/package.json
+++ b/lib/plugins/toneanalyzer/package.json
@@ -4,10 +4,11 @@
     "main": "toneanalyzer.js",
     "private": true,
     "dependencies": {
+      "debug": "^3.1.0",
       "watson-developer-cloud": "^2.39.2"
     },
     "plugin": {
         "consumes": [],
-        "provides": ["toneanalyzer"]
+        "provides": ["toneanalyzer", "toneanalyzerMiddleware"]
     }
 }
