Adapted Language Translator to Middleware Pattern

--- a/lib/plugins/languagetranslator/package.json
+++ b/lib/plugins/languagetranslator/package.json
@@ -4,10 +4,11 @@
     "main": "languagetranslator.js",
     "private": true,
     "dependencies": {
+      "debug": "^3.1.0",
       "watson-developer-cloud": "^2.39.2"
     },
     "plugin": {
         "consumes": [],
-        "provides": ["languagetranslator"]
+        "provides": ["languageTranslator", "languageTranslatorMiddleware"]
     }
 }
