--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google/maps": "^0.4.3",
     "architect": "^0.1.13",
+    "botkit-middleware-watson": "^1.5.0",
     "debug": "^3.1.0",
     "watson-developer-cloud": "^2.39.2"
   },
