--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@google/maps": "^0.4.3",
     "architect": "^0.1.13",
     "botkit-middleware-watson": "^1.5.0",
+    "cfenv": "^1.0.4",
     "debug": "^3.1.0",
+    "node-rsa": "^0.4.2",
     "sample-wch-node-connector": "^0.7.2",
     "watson-developer-cloud": "^2.39.2"
   },
