Enabled env environment. Added missing handlebars dependency to package json.

--- a/lib/plugins/wch/package.json
+++ b/lib/plugins/wch/package.json
@@ -8,7 +8,7 @@
       "sample-wch-node-connector": "^0.7.2"
     },
     "plugin": {
-        "consumes": [],
+        "consumes": ["env"],
         "provides": ["wch"]
     }
 }
