--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "@google/maps": "^0.4.3",
     "architect": "^0.1.13",
-    "botkit-middleware-watson": "^1.5.0",
+    "botkit-middleware-watson": "^1.6.1",
     "cfenv": "^1.0.4",
     "debug": "^3.1.0",
     "handlebars": "^4.0.11",
+    "node-cache": "^4.1.1",
     "node-rsa": "^0.4.2",
     "sample-wch-node-connector": "^0.7.2",
-    "watson-developer-cloud": "^2.39.2"
+    "watson-developer-cloud": "^2.42.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
