--- a/lib/plugins/clienttype/package.json
+++ b/lib/plugins/clienttype/package.json
@@ -3,11 +3,9 @@
     "version": "0.0.1",
     "main": "clienttype.js",
     "private": true,
-    "dependencies": {
-      "debug": "^3.1.0"
-    },
+    "dependencies": {},
     "plugin": {
-        "consumes": [],
+        "consumes": ["logging"],
         "provides": ["clientType", "clientTypeMiddleware"]
     }
 }
