--- a/lib/plugins/conversationmiddleware/package.json
+++ b/lib/plugins/conversationmiddleware/package.json
@@ -7,7 +7,7 @@
       "watson-developer-cloud": "^2.39.2"
     },
     "plugin": {
-        "consumes": ["env"],
+        "consumes": ["env", "logging"],
         "provides": ["conversationmiddleware"]
     }
 }
