Added logging to credentials plugin. Created documentation for credentials plugin.

--- a/lib/plugins/credentials/package.json
+++ b/lib/plugins/credentials/package.json
@@ -4,9 +4,10 @@
     "main": "credentials.js",
     "private": true,
     "dependencies": {
+      "node-rsa": "^0.4.2"
     },
     "plugin": {
-        "consumes": [],
+        "consumes": ["logging"],
         "provides": ["credentials"]
     }
 }
