--- a/lib/plugins/geolocation/package.json
+++ b/lib/plugins/geolocation/package.json
@@ -8,7 +8,7 @@
       "@google/maps": "^0.4.3"
     },
     "plugin": {
-        "consumes": ["env"],
+        "consumes": ["env", "logging"],
         "provides": ["geolocation", "geolocationMiddleware"]
     }
 }
