--- a/lib/plugins/templating/package.json
+++ b/lib/plugins/templating/package.json
@@ -4,10 +4,10 @@
     "main": "templating.js",
     "private": true,
     "dependencies": {
-      "debug": "^3.1.0"
+      "handlebars": "^4.0.11"
     },
     "plugin": {
-        "consumes": [],
+        "consumes": ["logging"],
         "provides": ["templating"]
     }
 }
