--- a/app_settings.json
+++ b/app_settings.json
@@ -13,7 +13,8 @@
    "path": "./dch_vcap.json",
    "encrypted": true,
    "pathPrivKey": "C:\\Users\\SvenSterbling\\.ssh\\id_rsa"
-  }
+  },
+  "debugToFile": false
  },
  "channels": {
   "alexa": {
