--- a/lib/plugins/wch/package.json
+++ b/lib/plugins/wch/package.json
@@ -4,11 +4,10 @@
     "main": "wch.js",
     "private": true,
     "dependencies": {
-      "debug": "^3.1.0",
       "sample-wch-node-connector": "^0.7.2"
     },
     "plugin": {
-        "consumes": ["env"],
+        "consumes": ["env", "logging"],
         "provides": ["wch"]
     }
 }
