--- a/lib/plugins/wchconversation/package.json
+++ b/lib/plugins/wchconversation/package.json
@@ -4,10 +4,10 @@
     "main": "wchconversation.js",
     "private": true,
     "dependencies": {
-      "debug": "^3.1.0"
+      "node-cache": "^4.1.1"
     },
     "plugin": {
-        "consumes": ["wch", "templating"],
+        "consumes": ["wch", "templating", "logging"],
         "provides": ["wchconversation"]
     }
 }
