Added logging, documentation and first tests to wchsync

--- a/lib/plugins/wchsync/package.json
+++ b/lib/plugins/wchsync/package.json
@@ -7,7 +7,7 @@
       "watson-developer-cloud": "^2.39.2"
     },
     "plugin": {
-        "consumes": ["conversation", "wch"],
+        "consumes": ["logging", "conversation", "wch"],
         "provides": ["wchsync"]
     }
 }
