--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha lib/**/**.spec.js",
-    "eslint": "gulp eslint"
+    "eslint": "gulp eslint",
+    "manageCreds": "node ./credentials.js manage",
+    "pushWCH": "node ./credentials.js push --wch"
   },
   "keywords": [],
   "author": "",
@@ -26,8 +28,9 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "co-mocha": "^1.2.0",
-    "commander": "^2.11.0",
+    "commander": "^2.12.2",
     "mocha": "^4.0.0",
-    "prompt": "^1.0.0"
+    "prompt": "^1.0.0",
+    "wchtools-cli": "^2.2.1"
   }
 }
