Updated credentials plugin to support unencrypted creds.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "manageCreds": "node ./credentials.js manage",
     "pushWCH": "node ./credentials.js push --wch"
   },
+  "bin": {
+    "credentials": "./credentials.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
