Added plugins as dependecies. Added scope @coreplugin

--- a/lib/plugins/clienttype/package.json
+++ b/lib/plugins/clienttype/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "clienttype",
+    "name": "@coreplugin/clienttype",
     "version": "0.0.1",
     "main": "clienttype.js",
     "private": true,
