--- a/lib/plugins/credentials/package.json
+++ b/lib/plugins/credentials/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "credentials",
+    "name": "@coreplugin/credentials",
     "version": "0.0.1",
     "main": "credentials.js",
     "private": true,
