--- a/lib/plugins/credentialsbluemix/package.json
+++ b/lib/plugins/credentialsbluemix/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "credentialsbluemix",
+    "name": "@coreplugin/credentialsbluemix",
     "version": "0.0.1",
     "main": "credentials.js",
     "private": true,
