--- a/lib/plugins/geolocation/package.json
+++ b/lib/plugins/geolocation/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "geolocation",
+    "name": "@coreplugin/geolocation",
     "version": "0.0.1",
     "main": "geolocation.js",
     "private": true,
