--- a/lib/plugins/logging/package.json
+++ b/lib/plugins/logging/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "logging",
+    "name": "@coreplugin/logging",
     "version": "0.0.1",
     "main": "logging.js",
     "private": true,
