--- a/package.json
+++ b/package.json
@@ -61,5 +61,12 @@
     "mocha": "^4.0.0",
     "prompt": "^1.0.0",
     "wchtools-cli": "^2.2.1"
+  },
+  "repository": {
+    "git": "git@github.com:ibm-wch/sample-wch-conversation-core.git"
+  },
+  "engines": {
+    "node": "8.x",
+    "npm": "5.x.x"
   }
 }
