--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "architect": "^0.1.13",
     "botkit-middleware-watson": "^1.6.1",
     "cfenv": "^1.0.4",
+    "commander": "^2.12.2",
     "debug": "^3.1.0",
     "handlebars": "^4.0.11",
     "node-cache": "^4.1.1",
     "node-rsa": "^0.4.2",
+    "prompt": "^1.0.0",
     "sample-wch-node-connector": "^0.7.2",
     "watson-developer-cloud": "^2.42.0",
+    "wchtools-cli": "^2.2.1",
     "@coreplugin/logging": "file:lib/plugins/logging",
     "@coreplugin/templating": "file:lib/plugins/templating",
     "@coreplugin/env": "file:lib/plugins/env",
@@ -57,13 +60,10 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "co-mocha": "^1.2.0",
-    "commander": "^2.12.2",
-    "mocha": "^4.0.0",
-    "prompt": "^1.0.0",
-    "wchtools-cli": "^2.2.1"
+    "mocha": "^4.0.0"
   },
   "repository": {
-    "git": "git@github.com:ibm-wch/sample-wch-conversation-core.git"
+    "git": "https://github.com/ibm-wch/sample-wch-conversation-core"
   },
   "engines": {
     "node": "8.x",
