--- a/lib/plugins/logging/package.json
+++ b/lib/plugins/logging/package.json
@@ -1,13 +1,15 @@
 {
-    "name": "@coreplugin/logging",
-    "version": "0.0.2",
-    "main": "logging.js",
-    "private": true,
-    "dependencies": {
-      "debug": "^3.1.0"
-    },
-    "plugin": {
-      "consumes": [],
-      "provides": ["logging"]
-    }
+  "name": "@coreplugin/logging",
+  "version": "0.0.2",
+  "main": "logging.js",
+  "private": true,
+  "dependencies": {
+    "debug": "^3.1.0"
+  },
+  "plugin": {
+    "consumes": [],
+    "provides": [
+      "logging"
+    ]
+  }
 }
