--- a/package.json
+++ b/package.json
@@ -27,9 +27,24 @@
   "author": "Sven Sterbling <sterbling@de.ibm.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@coreplugin/clienttype": "file:lib/plugins/clienttype",
+    "@coreplugin/conversation": "file:lib/plugins/conversation",
+    "@coreplugin/conversationmiddleware": "file:lib/plugins/conversationmiddleware",
+    "@coreplugin/credentials": "file:lib/plugins/credentials",
+    "@coreplugin/credentialsbluemix": "file:lib/plugins/credentialsbluemix",
+    "@coreplugin/developeractions": "file:lib/plugins/developeractions",
+    "@coreplugin/env": "file:lib/plugins/env",
+    "@coreplugin/geolocation": "file:lib/plugins/geolocation",
+    "@coreplugin/languagetranslator": "file:lib/plugins/languagetranslator",
+    "@coreplugin/logging": "file:lib/plugins/logging",
+    "@coreplugin/templating": "file:lib/plugins/templating",
+    "@coreplugin/toneanalyzer": "file:lib/plugins/toneanalyzer",
+    "@coreplugin/wch": "file:lib/plugins/wch",
+    "@coreplugin/wchconversation": "file:lib/plugins/wchconversation",
+    "@coreplugin/wchsync": "file:lib/plugins/wchsync",
     "@google/maps": "^0.4.3",
     "architect": "^0.1.13",
-    "botkit-middleware-watson": "^1.6.1",
+    "botkit-middleware-watson": "^1.7.0",
     "cfenv": "^1.0.4",
     "commander": "^2.12.2",
     "debug": "^3.1.0",
@@ -39,28 +54,13 @@
     "prompt": "^1.0.0",
     "sample-wch-node-connector": "^0.7.2",
     "watson-developer-cloud": "^2.42.0",
-    "wchtools-cli": "^2.2.1",
-    "@coreplugin/logging": "file:lib/plugins/logging",
-    "@coreplugin/templating": "file:lib/plugins/templating",
-    "@coreplugin/env": "file:lib/plugins/env",
-    "@coreplugin/geolocation": "file:lib/plugins/geolocation",
-    "@coreplugin/languagetranslator": "file:lib/plugins/languagetranslator",
-    "@coreplugin/toneanalyzer": "file:lib/plugins/toneanalyzer",
-    "@coreplugin/clienttype": "file:lib/plugins/clienttype",
-    "@coreplugin/wch": "file:lib/plugins/wch",
-    "@coreplugin/wchconversation": "file:lib/plugins/wchconversation",
-    "@coreplugin/wchsync": "file:lib/plugins/wchsync",
-    "@coreplugin/developeractions": "file:lib/plugins/developeractions",
-    "@coreplugin/conversation": "file:lib/plugins/conversation",
-    "@coreplugin/conversationmiddleware": "file:lib/plugins/conversationmiddleware",
-    "@coreplugin/credentialsbluemix": "file:lib/plugins/credentialsbluemix",
-    "@coreplugin/credentials": "file:lib/plugins/credentials"
+    "wchtools-cli": "^2.2.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "co-mocha": "^1.2.0",
-    "mocha": "^4.0.0"
+    "mocha": "^4.1.0"
   },
   "repository": {
     "git": "https://github.com/ibm-wch/sample-wch-conversation-core"
