--- a/package.json
+++ b/package.json
@@ -39,7 +39,15 @@
     "prompt": "^1.0.0",
     "sample-wch-node-connector": "^0.7.2",
     "watson-developer-cloud": "^2.42.0",
-    "wchtools-cli": "^2.2.1",
+    "wchtools-cli": "^2.2.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "co-mocha": "^1.2.0",
+    "mocha": "^4.0.0"
+  },
+  "optionalDependencies": {
     "@coreplugin/logging": "file:lib/plugins/logging",
     "@coreplugin/templating": "file:lib/plugins/templating",
     "@coreplugin/env": "file:lib/plugins/env",
@@ -55,12 +63,6 @@
     "@coreplugin/conversationmiddleware": "file:lib/plugins/conversationmiddleware",
     "@coreplugin/credentialsbluemix": "file:lib/plugins/credentialsbluemix",
     "@coreplugin/credentials": "file:lib/plugins/credentials"
-  },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "co-mocha": "^1.2.0",
-    "mocha": "^4.0.0"
   },
   "repository": {
     "git": "https://github.com/ibm-wch/sample-wch-conversation-core"
