--- a/app_settings.json
+++ b/app_settings.json
@@ -69,7 +69,8 @@
     "workspaceId": "d361c2fc-cfb7-40a1-a46a-a218b4e62136",
     "locale": "de"
    }
-  ]
+  ],
+  "serviceName": "wch-conversation"
  },
  "wchService": {
   "enabled": true,
