--- a/lib/plugins/languagetranslator/package.json
+++ b/lib/plugins/languagetranslator/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@coreplugin/languagetranslator",
+    "name": "languagetranslator",
     "version": "0.0.1",
     "main": "languagetranslator.js",
     "dependencies": {
