--- a/lib/plugins/clienttype/package.json
+++ b/lib/plugins/clienttype/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@coreplugin/clienttype",
+    "name": "clienttype",
     "version": "0.0.2",
     "main": "clienttype.js",
     "dependencies": {},
