--- a/app_settings.json
+++ b/app_settings.json
@@ -12,7 +12,7 @@
   "credentialsStore": {
    "path": "./dch_vcap.json",
    "encrypted": true,
-   "pathPrivKey": "/Users/sterbling@de.ibm.com/.ssh/id_rsa"
+   "pathPrivKey": "~/.ssh/id_rsa"
   },
   "debugToFile": false
  },
@@ -62,12 +62,12 @@
  "conversationMiddleware": {
   "config": [
    {
-    "workspaceId": "9db75ce4-a059-4f53-988d-de239eed10a0",
-    "locale": "en"
-   },
-   {
     "workspaceId": "d361c2fc-cfb7-40a1-a46a-a218b4e62136",
     "locale": "de"
+   },
+   {
+    "workspaceId": "9db75ce4-a059-4f53-988d-de239eed10a0",
+    "locale": "en"
    }
   ],
   "serviceName": "wch-conversation"
