--- a/lib/plugins/conversationmiddleware/package.json
+++ b/lib/plugins/conversationmiddleware/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@coreplugin/conversationmiddleware",
+    "name": "conversationmiddleware",
     "version": "0.0.1",
     "main": "conversationmiddleware.js",
     "dependencies": {
