--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "commander": "^2.15.1",
     "debug": "^3.1.0",
     "handlebars": "^4.0.11",
+    "moment-timezone": "^0.5.17",
     "node-cache": "^4.2.0",
     "node-rsa": "^1.0.0",
     "prompt": "^1.0.0",
